# hawat

./: .gitignore  LICENSE  README.md  pyproject.toml
containers/postgres/: Containerfile  podman.sh
hawat/: dispatcher.py  embeddings.py  grpc_server.py  language.py  memory.py  reflection.py
hawat/memory/: __init__.py  context.py  conversations.py  messages.py  reflection.py  schema.py
hawat/proto/: chat.proto  chat_pb2.py  chat_pb2_grpc.py
